--- a/HaCreator/GUI/InstanceEditor/LoadClassListSelector.xaml
+++ b/HaCreator/GUI/InstanceEditor/LoadClassListSelector.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="HaCreator.GUI.InstanceEditor.LoadJobsListSelector"
+﻿<Window x:Class="HaCreator.GUI.InstanceEditor.LoadClassListSelector"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
